--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "moviesdb",
+  "name": "rrfe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-overdrive": "0.0.10",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
